# prompt-performance-engine

./: .gitignore  ACCEPTANCE-CRITERIA.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  IMAGE-REVIEW-PROTOCOL.md  IMPLEMENTATION-STATUS.md  MIGRATION-PLAN.md  MIGRATION.md  PRODUCT-SPEC.md  README.md  ROADMAP.md  SECURITY.md  SOFTWARE-SANDBOX.md  WORLD-CLASS-DELIVERY-PLAN.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
adversarial_cases/: manifest.json  output_manifest.json
benchmark/: README.md  catalog-60.json  core-18.json  extension-42.json  image-generation-source-prompt.txt
examples/: sample-original-prompt.txt
profiles/: domain_profiles.json
prompts/: optimizer.md
schemas/: benchmark-replicate-report.schema.json  evaluation-recorded-run.schema.json  human-review-plan.schema.json  human-review-submission.schema.json  image-generation-manifest.schema.json  optimization-artifact.schema.json  optimization-request.schema.json  readiness-evidence.schema.json  readiness-manifest.schema.json  readiness-report.schema.json  tool-permission-manifest.schema.json  visual-review-packet.schema.json  visual-review-submission.schema.json  visual-reviewer-profile.schema.json
scripts/: run_codex_benchmark.py  validate_release.py
tests/: test_adapters.py  test_analysis.py  test_audit.py  test_benchmark.py  test_benchmark_replicates.py  test_case_checks.py  test_cli.py  test_codex_benchmark_runner.py  test_codex_evaluation.py  test_compiler.py  test_contracts.py  test_domain_checks.py  test_evaluation.py  test_evidence.py  (+14 more)
(+50 files in other folders)
