[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-performance-engine"
version = "0.3.0"
description = "Cross-domain Prompt optimization and evidence engine"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
prompt-performance = "prompt_performance_engine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
prompt_performance_engine = ["py.typed"]

[tool.setuptools.data-files]
prompt_performance_engine_data = ["VERSION"]
"prompt_performance_engine_data/prompts" = ["prompts/optimizer.md"]
"prompt_performance_engine_data/profiles" = ["profiles/domain_profiles.json"]
